criar header com banner de gato

--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+
     <nav>
-        <a href="">Beluga</a>
-        <a href="">Profissoes beluga</a>
+        <a href="">Gato</a>
+        <a href="">Profissoes gato</a>
         <a href="">O que comem</a>
         <a href="">Onde vivem</a>
     </nav>
+
+    <header>
+        <h1>Bem <span>vindo</span> gato</h1>
+    </header>
 </body>
 </html>
