criar caixa de login

--- a/index.html
+++ b/index.html
@@ -18,5 +18,14 @@
     <header>
         <h1>Bem <span>vindo</span> gato</h1>
     </header>
+
+    <section>
+        <div>
+            <h1>Login</h1>
+            <input placeholder="Email" type="email" name="" id="">
+            <input placeholder="Senha" type="password" name="" id="">
+            <button>Acessar</button>
+        </div>
+    </section>
 </body>
 </html>
